// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for maxWidth: 20 and columns: { base: 4, s: 3, m: 2, l: 'auto' } 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(4, 46px) !important;
  gap: 6px !important;
}
:host([hidden]) {
  display: none !important;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: repeat(3, 46px) !important;
  }
}

@media(min-width:1000px) {
  :host {
    grid-template-columns: repeat(2, 46px) !important;
  }
}

@media(min-width:1300px) {
  :host {
    grid-template-columns: repeat(auto-fit, minmax(46px, 1fr)) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for maxWidth: 20 and columns: auto 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(auto-fit, minmax(46px, 1fr)) !important;
  gap: 6px !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for maxWidth: 80 and columns: 1 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(1, 80px) !important;
  gap: 6px !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for maxWidth: 230 and columns: 10 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(10, 220px) !important;
  gap: 6px !important;
}
:host([hidden]) {
  display: none !important;
}"
`;
